--- a/BooleanCompletenessBack/Dockerfile
+++ b/BooleanCompletenessBack/Dockerfile
@@ -1,13 +1,9 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet restore
 RUN dotnet publish -c Release -o /app
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app .
-ENV ASPNETCORE_URLS=http://*:$PORT
-ENV PORT=8080
-EXPOSE 8080
-ENTRYPOINT ["dotnet", "BooleanCompletenessBack.dll"]
+ENTRYPOINT ["dotnet", "trps_kursovaya.dll"]
